Add proper support for COOP_WEB payment links